# advent-of-code-rust

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config  config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  readme-stars.yml
benches/: benchmark.rs
scripts/: download.sh  scaffold.sh
src/: day.rs  day01.rs  helpers.rs  lib.rs  main.rs  template.txt
src/examples/: 01.txt
src/template/: aoc_cli.rs  day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  template.txt  timings.rs  year.rs
src/template/commands/: all.rs  attempt.rs  download.rs  input_sync.rs  mod.rs  new_year.rs  read.rs  scaffold.rs  set_year.rs  solve.rs  switchyear.rs  time.rs
year_template/: Cargo.toml
year_template/.cargo/: config.toml
year_template/src/: lib.rs  main.rs
year_template/src/template/: aoc_cli.rs  day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  template.txt  timings.rs
year_template/src/template/commands/: all.rs  attempt.rs  mod.rs  read.rs  scaffold.rs  set_year.rs  solve.rs  time.rs
