[package]
name = "advent_of_code_YEAR_NUMBER"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
graph_builder = "0.4.0"
regex = "1.11.1"
pico-args = "0.5.0"
tinyjson = "2.5.1"
num = "0.4.3"

# Solution dependencies
